# ai-enterprise-studio

./: .coverage  .env.example  .env.test  .gitignore  AUTH_SERVER_FIX.md  GIT-REFERENCE.md  README.md  docker-compose.yml  eslint.config.js  kill-ports.bat  package-lock.json  package.json  pyproject.toml  start-dev.ps1  start.bat  stop.bat  test-auth.bat  turbo.json
.claude/: settings.local.json
apps/analysis-server/: .gitignore  README.md  auth.py  engine_manager.py  load_env.py  package.json  requirements-dev.txt  requirements.txt  server.py
apps/auth-server/: .env.example  .gitignore  README.md  SETUP_COMPLETE.md  TEST_README.md  auth_dependencies.py  auth_endpoints.py  auth_service.py  auth_setup.py  conftest.py  database.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  start.bat  test_auth.py  test_rbac.py  test_server.py
apps/video-analysis-server/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  package.json  pyproject.toml  pytest.ini  requirements.txt  server.py  start.bat
apps/video-analysis-server/gpu/: __init__.py
apps/video-analysis-server/gpu/testing/: __init__.py  test_clip_visual.py  test_emotion.py  test_engagement_prediction.py  test_face_expression.py  test_gpu.py  test_mediapipe_pose.py  test_scene_detection.py  test_video_quality.py
apps/web-analysis/: README.md  package.json  vite.config.ts
docs/: ARCHITECTURE.md  LINTING_AND_FORMATTING.md  MODULE_FEDERATION.md  SETUP_COMPLETE.md
engines/: .gitkeep
libs/: __init__.py
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt
(+108 files in other folders)
