[project]
name = "video-analysis-server"
version = "0.1.0"
description = "AI-powered video analysis microservice"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["gpu/testing"]
python_files = "test_*.py"
